--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,15 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --main-font: 'inter', sans-serif;
+    --accent-font: 'PressStart2P', monospace;
+    --main-font-weight: 400;
+    --accent-font-weight: 700;
+    --bg-color: #fff;
+    --main-color: #000;
+    --button-text-color: var(--bg-color);
+    --sparks-color: #FF0000;
+    --bg-image: 
+        repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+        repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+        linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+}
