--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,14 +2,14 @@
 :root {
     --main-font: 'inter', sans-serif;
     --accent-font: 'PressStart2P', monospace;
-    --main-font-weight: 400;
-    --accent-font-weight: 700;
-    --bg-color: #fff;
-    --main-color: #000;
-    --button-text-color: var(--bg-color);
+    --main-font-weight: 465;
+    --accent-font-weight: 785;
+    --bg-color: #000;
+    --main-color: #00cc14;
+    --button-text-color: var(--main-color);
     --sparks-color: #FF0000;
     --bg-image: 
-        repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-        repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-        linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+    repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(#000, #000 2px, transparent 2px, transparent 4px),
+    linear-gradient(#007f0c, #004306);
 }
