--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,7 +1,9 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Variable.woff2') format('woff2-variations');
+    src:
+    url('Inter-Variable.woff2') format('woff2 supports variations'),
+    url('Inter-Variable.woff2') format('woff2-variations');
     font-weight: 400 785;
     font-display: swap;
 }
