--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
 /* HEADER */
 
 .header {
-  font-family: var(--accent-font, monospace);
+  font-family: var(--accent-font, fantasy);
   inline-size: min(700px, 100%);
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
@@ -64,7 +64,6 @@
   }
 
   &:focus-visible {
-    transition: 0.3s ease;
     opacity: 0.6;
   }
 }
@@ -84,7 +83,6 @@
 
 .theme-menu__button:enabled:focus-visible:before {
   transform: scale(1);
-  transition: 0.3s ease;
 }
 
 .theme-menu__item:not(:last-of-type) {
@@ -138,25 +136,25 @@
   border-block-start: none;
 }
 
-.image-wrapper::before {
+.image-label {
   position: absolute;
-  inset-inline-end: 10px;
-  inset-block-start: 10px;
-  content: '</HTML>';
-  font-family: var(--accent-font, monospace);
+  inset-inline-end: 25px;
+  inset-block-start: 25px;
+  font-family: var(--accent-font, fantasy);
   mix-blend-mode: hard-light;
   color: var(--main-color);
   opacity: 0.5;
+  font-size: 14px;
   text-shadow:
-    -1px 0 var(--bg-color), 
-    0 1px var(--bg-color), 
-    1px 0 var(--bg-color), 
+    -1px 0 var(--bg-color),
+    0 1px var(--bg-color),
+    1px 0 var(--bg-color),
     0 -1px var(--bg-color);
   z-index: 1;
 }
 
 @supports((text-stroke: 1px var(--bg-color)) or (-webkit-text-stroke: 1px var(--bg-color))) {
-  .image-wrapper::before {
+  .image-label {
     -webkit-text-stroke: 1px var(--bg-color);
     text-stroke: 1px var(--bg-color);
     text-shadow: 1px var(--bg-color);
@@ -165,71 +163,38 @@
 
 .card__image {
   object-fit: cover;
+  object-position: center;
   aspect-ratio: 1 / 1;
   inline-size: 100%;
   display: block;
 }
 
-li {
-  &:first-child .card__image {
-    filter: sepia(100%) saturate(300%) invert(1) hue-rotate(270deg);
-  }
+.filter-multiple {
+  filter: sepia(100%) saturate(250%) hue-rotate(80deg) var(--filter-invert) var(--filter-grayscale);
+}
 
-  &:nth-child(2) .card__image {
-    filter: sepia(100%) hue-rotate(90deg) saturate(300%);
-  }
+.filter-multiple-opacity {
+  filter: sepia(100%) saturate(250%) hue-rotate(80deg) opacity(50%) var(--filter-invert) var(--filter-grayscale);
+}
 
-  &:nth-child(3) .card__image {
-    filter: sepia(100%) hue-rotate(90deg) saturate(300%);
-  }
+.filter-multiple-contrast {
+  filter: sepia(100%) saturate(250%) hue-rotate(80deg) contrast(150%) var(--filter-invert) var(--filter-grayscale);
+}
 
-  &:nth-child(4) .card__image {
-    filter: brightness(150%) sepia(100%) saturate(300%) invert(1) hue-rotate(270deg);
-  }
+.filter-multiple-brightness {
+  filter: sepia(100%) saturate(250%) hue-rotate(80deg) brightness(120%) var(--filter-invert) var(--filter-grayscale);
+}
 
-  &:nth-child(5) .card__image {
-    filter: hue-rotate(346deg);
-  }
+.filter-hue-rotate {
+  filter: hue-rotate(115deg) var(--filter-invert) var(--filter-grayscale);
+}
 
-  &:nth-child(6) .card__image {
-    filter: hue-rotate(130deg) saturate(75%);
-  }
+.filter-multiple-blur {
+  filter: sepia(100%) saturate(250%) hue-rotate(80deg) blur(4px) var(--filter-invert) var(--filter-grayscale);
+}
 
-  &:nth-child(7) .card__image {
-    filter: blur(4px) hue-rotate(280deg);
-  }
-
-  &:nth-child(8) .card__image {
-    filter: hue-rotate(110deg) invert(1);
-  }
-
-  &:nth-child(2) .image-wrapper::before {
-    content: "<forward>";
-  }
-
-  &:nth-child(3) .image-wrapper::before {
-    content: "<need>";
-  }
-
-  &:nth-child(4) .image-wrapper::before {
-    content: "<perfect>";
-  }
-
-  &:nth-child(5) .image-wrapper::before {
-    content: "<go_out>";
-  }
-
-  &:nth-child(6) .image-wrapper::before {
-    content: "<rubber>";
-  }
-
-  &:nth-child(7) .image-wrapper::before {
-    content: "<hard>";
-  }
-
-  &:nth-child(8) .image-wrapper::before {
-    content: "<friendship>";
-  }
+.filter-hue-invert {
+  filter: hue-rotate(110deg) invert(1) var(--filter-invert) var(--filter-grayscale);
 }
 
 /* CARD CONTENT */
@@ -261,6 +226,7 @@ li {
   border: 2px solid transparent;
   block-size: 38px;
   transition: 0.3s ease;
+  cursor: pointer;
 
   &:focus {
     outline: none;
@@ -269,7 +235,6 @@ li {
 
 .card__icon-button:focus-visible {
   border: 2px solid var(--main-color);
-  transition: 0.3s ease;
 }
 
 .like-icon {
@@ -279,58 +244,54 @@ li {
 .like-icon .core {
   fill: var(--main-color);
   opacity: 0;
-  transition: 0.03s;
+  transition: 0.3s linear 0.03s;
 }
 
 .like-icon:hover .core {
   opacity: 1;
-  transition: 0.3s;
+  transition: 0.3s linear;
 }
 
 .like-icon .main-body {
   fill: var(--main-color);
   opacity: 0;
-  transition: 0.3s;
+  transition: 0.3s linear;
 }
 
 .like-icon:hover .main-body {
   opacity: 1;
-  transition: 0.3s;
-  transition-delay: 0.05s;
+  transition: 0.3s linear 0.05s;
 }
 
 .like-icon:active .core {
   fill: var(--sparks-color);
-  transition: 0.3s;
+  transition: 0.3s linear;
 }
 
 .like-icon:active .main-body {
   fill: var(--sparks-color);
-  transition: 0.3s;
-  transition-delay: 0.05s;
+  transition: 0.3s linear 0.05s;
 }
 
 .like-icon.is-liked .core {
   fill: var(--sparks-color);
   opacity: 1;
-  transition: 0.3s;
+  transition: 0.3s linear;
 }
 
 .like-icon.is-liked .main-body {
   fill: var(--sparks-color);
   opacity: 1;
-  transition: 0.3s;
-  transition-delay: 0.05s;
+  transition: 0.3s linear 0.05s;
 }
 
 .like-icon .contour {
-  transition: 0.1s;
+  transition: 0.1s linear;
 }
 
 .like-icon.is-liked .contour {
   fill: var(--sparks-color);
-  transition: 0.3s;
-  transition-delay: 0.06s;
+  transition: 0.3s linear 0.06s;
 }
 
 .like-icon.is-liked .heart {
@@ -346,38 +307,25 @@ li {
   animation: opacity 0.3s ease-in alternate 0.3s;
 }
 
-.card__like-button {
+.button {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  min-block-size: 38px;
-  min-inline-size: 130px;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
   cursor: pointer;
 }
 
-.save-button {
-  position: relative;
-  padding: 5.5px 20px;
-  background-color: var(--bg-color);
-  border: 2px solid var(--main-color);
-}
-
-.save-button:focus,
-.card__like-button:focus {
+.button:focus {
   outline: none;
 }
 
-.save-button:focus-visible,
-.card__like-button:focus-visible {
+.button:focus-visible {
   box-shadow: 2px 2px 0 var(--main-color);
-  transition: 0.3s ease;
 }
 
-.save-button::before,
-.card__like-button::before {
+.button::before {
   content: '';
   position: absolute;
   width: 100%;
@@ -390,19 +338,27 @@ li {
   transition: 0.5s ease-in-out;
 }
 
-.save-button:hover::before,
-.card__like-button:hover::before {
+.button:hover::before {
   transform: scale(1);
-  transition: 0.5s ease-in-out;
+}
+
+.card__like-button {
+  min-block-size: 38px;
+  min-inline-size: 130px;
+}
+
+.save-button {
+  padding: 5.5px 20px;
 }
 
 .button__text {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8px;
   font-size: 14px;
-  font-family: var(--accent-font, monospace);
+  font-family: var(--accent-font, fantasy);
   line-height: 90%;
   color: var(--button-text-color);
   z-index: 1;
@@ -415,18 +371,18 @@ li {
 
 .save-button-dialog[open] {
   display: grid;
-  grid-template-columns: 39px auto;
   gap: 30px 20px;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
-  font-family: var(--accent-font, monospace);
+  font-family: var(--accent-font, fantasy);
   text-transform: uppercase;
   color: var(--main-color);
   padding: 30.5px;
+  max-inline-size: 353px;
 
   & button {
     grid-column: 1/3;
-    padding: 12.5px 132.5px;
+    padding: 12.5px;
   }
 
   & svg {
@@ -443,6 +399,7 @@ li {
   font-size: 14px;
   line-height: 150%;
   align-self: center;
+  max-inline-size: 234px;
 }
 
 /* -------------------------------------------------------------------------------------------- */
@@ -465,7 +422,8 @@ li {
     inline-size: 29px;
   }
 
-  .save-button-dialog[open] button {
-    padding: 12.5px 114.5px;
+  .image-label {
+    inset-inline-end: 11px;
+    inset-block-start: 23px;
   }
 }
