--- a/styles/themes.css
+++ b/styles/themes.css
@@ -11,6 +11,8 @@
     --bg-color: #000;
     --main-color: #00cc14;
     --button-text-color: var(--main-color);
+    --filter-grayscale: grayscale(0);
+    --filter-invert: invert(0);
     --bg-image: 
     repeating-linear-gradient(90deg, #000, #000 2px, transparent 2px, transparent 4px),
     repeating-linear-gradient(#000, #000 2px, transparent 2px, transparent 4px),
@@ -23,14 +25,12 @@
     --bg-color: #fff;
     --main-color: #000;
     --button-text-color: var(--bg-color);
+    --filter-grayscale: grayscale(1);
+    --filter-invert: invert(1);
     --bg-image: 
     repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
     repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
     linear-gradient(#e7e7e7 0.01%, #1a1a1a);
-
-    & .card__image{
-        filter: grayscale(1);
-    }
 }
 
 @media (prefers-color-scheme: light) {
@@ -40,13 +40,11 @@
         --bg-color: #fff;
         --main-color: #000;
         --button-text-color: var(--bg-color);
+        --filter-grayscale: grayscale(1);
+        --filter-invert: invert(1);
         --bg-image: 
             repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
             repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
             linear-gradient(#e7e7e7 0.01%, #1a1a1a);
-    }
-
-    .theme-auto .card__image {
-        filter: grayscale(1) !important;
     }
 }
